2nd Header Finished

--- a/header/header.html
+++ b/header/header.html
@@ -59,7 +59,10 @@
 
     <header id="spacer"></header>
 
-
+    <!--Header 3 HTML-->
+    <header id="navbar3">
+        <div class="sel"
+    </header>
 
 </body>
 
