4th Header Done

--- a/header/header.html
+++ b/header/header.html
@@ -61,7 +61,39 @@
 
     <!--Header 3 HTML-->
     <header id="navbar3">
-        <div class="sel"
+        <nav>
+            <ul class="navlinks1">
+                <li><a href="option1.html">Option1</a></li>
+                <li><a href="option2.html">Option2</a></li>
+                <li><a href="option3.html">Option3</a></li>
+            </ul>
+        </nav>
+        <div class="logo3">
+            <a href="landingPage.html">
+                <img src="images/Kale_Photography_Logo.png" alt="tempLogo"
+                style="width:10rem; height:4.75rem;">
+            </a>
+        </div>
+
+    </header>
+
+    <header id="spacer"></header>
+
+    <!--Header 3 HTML-->
+    <header id="navbar4">
+        <div class="checkbox4">
+            <div class="burgerbox2" onclick="hiddenMenu()">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </div>
+        <div class="logo4">
+            <a href="landingPage.html">
+                <img src="images/Kale_Photography_Logo.png" alt="tempLogo"
+                style="width:10rem; height:4.75rem;">
+            </a>
+        </div>
     </header>
 
 </body>
